# KV_Server

./: .gitignore  CMakeLists.txt  README.md  start_script.sh  valgrind_test.sh
.VSCodeCounter/2025-05-13_21-32-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-13_21-33-02/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
client/: client.cpp
include/: ConcurrentQueue.h  Connection.h  List.h  List.tpp  ListValue.h  ListValue.tpp  Logger.h  Number.h  Number.tpp  NumberList.h  NumberList.tpp  NumberListValue.h  NumberListValue.tpp  NumberValue.h  NumberValue.tpp  RB-Tree.cpp  RB-Tree.h  RB-Tree.tpp  Response.h  Scalar.h  Serializable.h  Server.h  String.h  StringList.h  StringListValue.h  StringValue.h  Type.h  Value.h  ValueSet.h  command_handler.h  config.h  datastore.h  exception.h  hashtable.h  hashtable.tpp  linked_list.h  linked_list.tpp  thread_gaurd.h
script/: command.py  logger.py  main.py
shared/: helpers.cpp  helpers.h  helpers.tpp
shared/exception/: MalformedMessage.cpp  MalformedMessage.h  NotFoundException.cpp  NotFoundException.h  TypeMismatchException.cpp  TypeMismatchException.h  WrongCommandException.cpp  WrongCommandException.h  exception.cpp  exception.h
src/: ConcurrentQueue.cpp  Connection.cpp  Driver.cpp  List.cpp  ListValue.cpp  Logger.cpp  NumberList.cpp  Response.cpp  Server.cpp  String.cpp  StringList.cpp  StringListValue.cpp  StringValue.cpp  Type.cpp  Value.cpp  command_handler.cpp  config.cpp  datastore.cpp  exception.cpp
